--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-numpy==1.18.5
+numpy==1.19.2
 python-dateutil==2.8.1
-python-dotenv==0.13.0
-discord.py==1.3.3
+python-dotenv==0.14.0
+discord.py==1.4.1
+pandas==1.1.2
