--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 numpy==1.19.2
 python-dateutil==2.8.1
 python-dotenv==0.14.0
-discord.py==1.4.1
 pandas==1.1.2
+dash==1.18.1
+plotly==4.14.3
+Flask==1.1.2
+discord.py==1.4.1
